# SmallOldGames

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SmallOldGames.spec  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
assets/branding/: SmallOldGames.desktop
assets/config/: sketch_hopper.toml
assets/shaders/: color.frag  color.frag.spv  color.vert  color.vert.spv  post.frag  post.frag.spv  post.vert  post.vert.spv  post_copy.frag  post_copy.frag.spv
assets/sprites/: boots.xpm  enemy_shot.xpm  hopper.xpm  invader_a.xpm  invader_b.xpm  invader_c.xpm  jetpack.xpm  monster.xpm  projectile.xpm  shield.xpm  ufo.xpm
docs/: adr-ecs.md
scripts/: build_linux.sh  build_windows.bat  build_windows.ps1  validate_assets.py
smalloldgames/: __init__.py  benchmark.py
smalloldgames/assets/: __init__.py  atlas.py  bitmap_font.py  catalog.py  sprites.py
smalloldgames/data/: __init__.py  benchmark_results.py  storage.py
smalloldgames/engine/: __init__.py  animation.py  app.py  audio.py  camera.py  collision.py  components.py  debug_overlay.py  ecs.py  game_registry.py  game_state.py  input.py  particles.py  persistence.py  physics.py  resources.py  scene.py  touch.py  ui.py
smalloldgames/games/: __init__.py  benchmark.py  sketch_hopper.py  snake.py  space_invaders.py
tests/: test_animation.py  test_app.py  test_audio.py  test_benchmark.py  test_camera.py  test_collision.py  test_debug_overlay.py  test_ecs.py  test_engine_physics.py  test_engine_ui.py  test_game_registry.py  test_game_state.py  test_input.py  test_integration.py  test_launcher_menu.py  test_particles.py  test_persistence.py  test_primitives.py  test_scoreboard.py  test_sketch_hopper.py  test_sketch_hopper_config.py  test_snake.py  test_space_invaders.py  test_sprites.py  test_touch.py  test_vulkan_renderer.py
(+48 files in other folders)
